Update match play scraper logic

--- a/testdata/match-play-bracket.html
+++ b/testdata/match-play-bracket.html
@@ -25,7 +25,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script type="text/javascript" src="https://cdn.bluegolf.com/js/bootstrap/4.6.2/js/popper.js"></script>
 <script type="text/javascript" src="https://cdn.bluegolf.com/js/bootstrap/4.6.2/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/bgbootstrap.js"></script>
-<script type="text/javascript" src="https://cdn.bluegolf.com/ver/20250528201432/js/bgjquery.js"></script>
+<script type="text/javascript" src="https://cdn.bluegolf.com/ver/20250603210712/js/bgjquery.js"></script>
 <script type="text/javascript">
 <!--
 $(function() {
@@ -49,14 +49,14 @@ $(function(){
            });                             
        });                                 
    });                                     
-</script><link rel="stylesheet" type="text/css" href="/css/screen_bootstrap4.css" /><link rel="stylesheet" type="text/css" href="https://www.bluegolf.com/css/screenwww_bootstrap4.css?ver=20250528201432"/>
-<link rel="stylesheet" type="text/css" href="/css/www-override_bootstrap4.css" /><link rel="stylesheet" type="text/css" href="https://www.bluegolf.com/css/wwwprofile.css?ver=20250528201432"/>
+</script><link rel="stylesheet" type="text/css" href="/css/screen_bootstrap4.css" /><link rel="stylesheet" type="text/css" href="https://www.bluegolf.com/css/screenwww_bootstrap4.css?ver=20250603210712"/>
+<link rel="stylesheet" type="text/css" href="/css/www-override_bootstrap4.css" /><link rel="stylesheet" type="text/css" href="https://www.bluegolf.com/css/wwwprofile.css?ver=20250603210712"/>
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
 <style> #bgContentContainer { margin-bottom: 50px; max-width: 1420px!important; min-height: 680px; } #pgmHeader .container { width: 1420px !important; max-width: unset; } </style><script src="https://cdn.bluegolf.com/js/quasimondo-blur/FastBlur.min.jsz" type="text/javascript"></script>
-<script src="https://www.bluegolf.com/js/layoutsection.js?ver=20250528201432" type="text/javascript"></script>
-<script src="https://cdn.bluegolf.com/ver/20250528201432/js/holeover.js"></script>
+<script src="https://www.bluegolf.com/js/layoutsection.js?ver=20250603210712" type="text/javascript"></script>
+<script src="https://cdn.bluegolf.com/ver/20250603210712/js/holeover.js"></script>
 <style media="screen" type="text/css">span.holestat:hover{cursor:pointer}.yui-panel-container .yui-panel{border-width:2px}.yui-panel-container .yui-panel .bd{padding:0;background:#ccc}.yui-panel-container .yui-panel .hd .tl{padding:2px 5px 5px 5px}.hole-stat-panel{width:400px;margin-left:-200px}.hole-stat-panel .modal-body{max-height:450px}canvas{position:absolute}.bg-course-overview-range{font-size:2.5em}.bg-course-overview-range-minor{font-size:1.9em}.bg-course-overview-pinflag{height:32px;position:relative;width:11px}.bg-course-overview-aerial p{position:absolute;z-index:100;width:140px;font-size:18px;text-shadow:0 1px 4px #fff;color:#505050;line-height:.9;text-align:left}#holeMap{height:510px;width:360px}@media (max-width:767px){.modal.fade.in{top:20px;left:50%}}</style>
-<link href="https://www.bluegolf.com/css/leftsidebar_bootstrap4.css?ver=20250528201432" rel="stylesheet" type="text/css"/>
+<link href="https://www.bluegolf.com/css/leftsidebar_bootstrap4.css?ver=20250603210712" rel="stylesheet" type="text/css"/>
 <script type="text/javascript">
 <!--
     window.addEventListener('DOMContentLoaded', function() {
@@ -275,8 +275,8 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 	<tr>
 		<td class="border-top text-right">16.&nbsp;</td>
 		<td class="border-top border-right"><span class="d-none d-md-table-cell">Chris Pacia</span><span class="d-md-none">C. Pacia</span></td>
-		<td class="border-bottom text-right align-bottom"></td>
-		<td class="border-bottom border-right align-bottom"></td>
+		<td class="border-bottom text-right align-bottom">17.&nbsp;</td>
+		<td class="border-bottom border-right align-bottom">S. Smith</td>
 		<td>&nbsp;</td>
 		<td class="border-right">&nbsp;</td>
 		<td class="border-bottom text-right align-bottom" rowspan="3">&nbsp;</td>
@@ -287,7 +287,7 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 		<td class="border-bottom text-right align-top">17.&nbsp;</td>
 		<td class="border-right border-bottom align-bottom"><span class="d-none d-md-table-cell">Scott Smith</span><span class="d-md-none">S. Smith</span></td>
 		<td>&nbsp;</td>
-		<td><a href="../3/match/48/mtchcard.htm">Tied</a></td>
+		<td><a href="../3/match/64/mtchcard.htm"> 4&amp;2</a></td>
 		<td rowspan="3">&nbsp;</td>
 		<td class="border-right text-right align-middle" rowspan="3">&nbsp;</td>
 
@@ -314,7 +314,7 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 		<td class="border-bottom text-right align-top">25.&nbsp;</td>
 		<td class="border-right border-bottom align-bottom"><span class="d-none d-md-table-cell">Marc Graham</span><span class="d-md-none">M. Graham</span></td>
 		<td>&nbsp;</td>
-		<td class="border-right"><a href="../3/match/49/mtchcard.htm">Tied</a></td>
+		<td class="border-right"><a href="../3/match/65/mtchcard.htm">Tied</a></td>
 		<td class="border-bottom text-right align-bottom" rowspan="2"></td>
 		<td class="border-bottom border-right align-bottom" rowspan="2"></td>
 
@@ -341,7 +341,7 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 		<td class="border-bottom text-right align-top">24.&nbsp;</td>
 		<td class="border-right border-bottom align-bottom"><span class="d-none d-md-table-cell">Chris Hatem</span><span class="d-md-none">C. Hatem</span></td>
 		<td>&nbsp;</td>
-		<td><a href="../3/match/50/mtchcard.htm">Tied</a></td>
+		<td><a href="../3/match/66/mtchcard.htm">Tied</a></td>
 		<td rowspan="3">&nbsp;</td>
 		<td rowspan="3">&nbsp;</td>
 
@@ -368,7 +368,7 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 		<td class="border-bottom text-right align-top">&nbsp;</td>
 		<td class="border-right border-bottom align-bottom"><span class="d-none d-md-table-cell">Scott Benedict</span><span class="d-md-none">S. Benedict</span></td>
 		<td>&nbsp;</td>
-		<td class="border-right"><a href="../3/match/51/mtchcard.htm">Tied</a></td>
+		<td class="border-right"><a href="../3/match/67/mtchcard.htm">Tied</a></td>
 		<td class="border-bottom text-right align-bottom" rowspan="2">&nbsp;</td>
 		<td class="border-bottom align-bottom" rowspan="2">&nbsp;</td>
 
@@ -395,7 +395,7 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 		<td class="border-bottom text-right align-top">20.&nbsp;</td>
 		<td class="border-right border-bottom align-bottom"><span class="d-none d-md-table-cell">Joseph Gagne</span><span class="d-md-none">J. Gagne</span></td>
 		<td>&nbsp;</td>
-		<td><a href="../3/match/52/mtchcard.htm">Tied</a></td>
+		<td><a href="../3/match/68/mtchcard.htm">Tied</a></td>
 		<td rowspan="3">&nbsp;</td>
 		<td class="border-right text-right align-middle" rowspan="3">&nbsp;</td>
 
@@ -410,8 +410,8 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 	<tr>
 		<td class="border-top text-right">5.&nbsp;</td>
 		<td class="border-top border-right"><span class="d-none d-md-table-cell">Connor Shaw</span><span class="d-md-none">C. Shaw</span></td>
-		<td class="border-bottom text-right align-bottom">&nbsp;</td>
-		<td class="border-bottom align-bottom">&nbsp;</td>
+		<td class="border-bottom text-right align-bottom">5.&nbsp;</td>
+		<td class="border-bottom align-bottom">C. Shaw</td>
 		<td rowspan="3">&nbsp;</td>
 		<td rowspan="3">&nbsp;</td>
 		<td rowspan="12">&nbsp;</td>
@@ -422,7 +422,7 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 		<td class="border-bottom text-right align-top">28.&nbsp;</td>
 		<td class="border-right border-bottom align-bottom"><span class="d-none d-md-table-cell">Joseph Collins</span><span class="d-md-none">J. Collins</span></td>
 		<td>&nbsp;</td>
-		<td class="border-right"><a href="../3/match/53/mtchcard.htm">Tied</a></td>
+		<td class="border-right"><a href="../3/match/69/mtchcard.htm"> 3&amp;2</a></td>
 		<td class="border-bottom text-right align-bottom" rowspan="2"></td>
 		<td class="border-bottom border-right align-bottom" rowspan="2"></td>
 
@@ -437,8 +437,8 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 	<tr>
 		<td class="border-top text-right">12.&nbsp;</td>
 		<td class="border-top border-right"><span class="d-none d-md-table-cell">Pat Blair</span><span class="d-md-none">P. Blair</span></td>
-		<td class="border-bottom text-right align-bottom"></td>
-		<td class="border-bottom border-right align-bottom"></td>
+		<td class="border-bottom text-right align-bottom">21.&nbsp;</td>
+		<td class="border-bottom border-right align-bottom">S. Dowd</td>
 		<td>&nbsp;</td>
 		<td>&nbsp;</td>
 		<td rowspan="6">&nbsp;</td>
@@ -449,7 +449,7 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 		<td class="border-bottom text-right align-top">21.&nbsp;</td>
 		<td class="border-right border-bottom align-bottom"><span class="d-none d-md-table-cell">Sean Dowd</span><span class="d-md-none">S. Dowd</span></td>
 		<td>&nbsp;</td>
-		<td><a href="../3/match/54/mtchcard.htm">Tied</a></td>
+		<td><a href="../3/match/70/mtchcard.htm"> 2&amp;1</a></td>
 		<td rowspan="3">&nbsp;</td>
 		<td rowspan="3">&nbsp;</td>
 
@@ -500,7 +500,7 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 		<td class="border-bottom text-right align-top">18.&nbsp;</td>
 		<td class="border-right border-bottom align-bottom"><span class="d-none d-md-table-cell">Benjamin Friend</span><span class="d-md-none">B. Friend</span></td>
 		<td>&nbsp;</td>
-		<td><a href="../3/match/56/mtchcard.htm">Tied</a></td>
+		<td><a href="../3/match/72/mtchcard.htm">Tied</a></td>
 		<td rowspan="3">&nbsp;</td>
 		<td class="border-right text-right align-middle" rowspan="3">&nbsp;</td>
 
@@ -527,7 +527,7 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 		<td class="border-bottom text-right align-top">26.&nbsp;</td>
 		<td class="border-right border-bottom align-bottom"><span class="d-none d-md-table-cell">James McKenzie</span><span class="d-md-none">J. McKenzie</span></td>
 		<td>&nbsp;</td>
-		<td class="border-right"><a href="../3/match/57/mtchcard.htm">Tied</a></td>
+		<td class="border-right"><a href="../3/match/73/mtchcard.htm">Tied</a></td>
 		<td class="border-bottom text-right align-bottom" rowspan="2"></td>
 		<td class="border-bottom border-right align-bottom" rowspan="2"></td>
 
@@ -554,7 +554,7 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 		<td class="border-bottom text-right align-top">23.&nbsp;</td>
 		<td class="border-right border-bottom align-bottom"><span class="d-none d-md-table-cell">Tim Meisel</span><span class="d-md-none">T. Meisel</span></td>
 		<td>&nbsp;</td>
-		<td><a href="../3/match/58/mtchcard.htm">Tied</a></td>
+		<td><a href="../3/match/74/mtchcard.htm">Tied</a></td>
 		<td rowspan="3">&nbsp;</td>
 		<td rowspan="3">&nbsp;</td>
 
@@ -580,7 +580,7 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 		<td class="border-bottom text-right align-top">&nbsp;</td>
 		<td class="border-right border-bottom align-bottom"><span class="d-none d-md-table-cell">James Wirbal</span><span class="d-md-none">J. Wirbal</span></td>
 		<td>&nbsp;</td>
-		<td class="border-right"><a href="../3/match/59/mtchcard.htm">Tied</a></td>
+		<td class="border-right"><a href="../3/match/75/mtchcard.htm">Tied</a></td>
 		<td class="border-bottom text-right align-bottom" rowspan="2">&nbsp;</td>
 		<td class="border-bottom align-bottom" rowspan="2">&nbsp;</td>
 
@@ -607,7 +607,7 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 		<td class="border-bottom text-right align-top">19.&nbsp;</td>
 		<td class="border-right border-bottom align-bottom"><span class="d-none d-md-table-cell">Tom Gibson II</span><span class="d-md-none">T. Gibson II</span></td>
 		<td>&nbsp;</td>
-		<td><a href="../3/match/60/mtchcard.htm">Tied</a></td>
+		<td><a href="../3/match/76/mtchcard.htm">Tied</a></td>
 		<td rowspan="3">&nbsp;</td>
 		<td class="border-right text-right align-middle" rowspan="3">&nbsp;</td>
 
@@ -634,7 +634,7 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 		<td class="border-bottom text-right align-top">27.&nbsp;</td>
 		<td class="border-right border-bottom align-bottom"><span class="d-none d-md-table-cell">John Theriault</span><span class="d-md-none">J. Theriault</span></td>
 		<td>&nbsp;</td>
-		<td class="border-right"><a href="../3/match/61/mtchcard.htm">Tied</a></td>
+		<td class="border-right"><a href="../3/match/77/mtchcard.htm">Tied</a></td>
 		<td class="border-bottom text-right align-bottom" rowspan="2"></td>
 		<td class="border-bottom border-right align-bottom" rowspan="2"></td>
 
@@ -661,7 +661,7 @@ var dropDownMenu = $('.bg-dropdown-menu', '.bg-event-view-picker');$('a', dropDo
 		<td class="border-bottom text-right align-top">22.&nbsp;</td>
 		<td class="border-right border-bottom align-bottom"><span class="d-none d-md-table-cell">Chad Lawrence</span><span class="d-md-none">C. Lawrence</span></td>
 		<td>&nbsp;</td>
-		<td><a href="../3/match/62/mtchcard.htm">Tied</a></td>
+		<td><a href="../3/match/78/mtchcard.htm">Tied</a></td>
 		<td rowspan="1">&nbsp;</td>
 		<td rowspan="1">&nbsp;</td>
 
@@ -812,9 +812,9 @@ if (top != self)
 //]]>
 </script>
 <script type="text/javascript" src="https://cdn.bluegolf.com/js/sidr/2.2.1/jquery.sidr.min.js"></script>
-<script src="https://www.bluegolf.com/js/bgpagenav.js?ver=20250528201432"></script><script src="https://www.bluegolf.com/js/sitesearch.js?ver=20250528201432"></script><script defer type="text/javascript" src="https://www.bluegolf.com/js/topbar.js"></script><script type="text/javascript">
+<script src="https://www.bluegolf.com/js/bgpagenav.js?ver=20250603210712"></script><script src="https://www.bluegolf.com/js/sitesearch.js?ver=20250603210712"></script><script defer type="text/javascript" src="https://www.bluegolf.com/js/topbar.js"></script><script type="text/javascript">
 $(function () { $('[data-toggle="popover"]').popover(); });
-</script><script src="https://cdn.bluegolf.com/ver/20250528201432/js/fav.js"></script>
+</script><script src="https://cdn.bluegolf.com/ver/20250603210712/js/fav.js"></script>
 <script type="text/javascript">!function(){"use strict";function i(t){document.getElementById("favframe").contentWindow.postMessage("/*fav_post*/"+JSON.stringify(t),"https://www.bluegolf.com")}var n;window.addEventListener("message",function(t){if(/^https:\/\/[-a-z]+\.bluegolf\.(biz|com)$/.test(t.origin)){var e=/^\s*\/\*\s*([^*\s]*)\s*\*\/(.*)/.exec(t.data);if(e&&"fav_data"===e[1]){var a=JSON.parse(e[2]);if(n?n(a):n=fav("https://app.bluegolf.com/util/api/fav.json",!1,a,i),a&&a.user&&a.user.uuid){var o=Date.now(),s=Number(localStorage.getItem("favdatausertime"))||0;localStorage.setItem("favdatausertime",o),15e5<o-s&&$.getScript("https://app.bluegolf.com/util/api/go.jsp?host=nhgaclub.bluegolf.com")}}}}),$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip()})}()</script>
 <div class="hide modal fade" role="dialog" id="auth-modal" tabindex="-1">
 <div class="modal-dialog" role="document">
@@ -883,7 +883,7 @@ $(function () { $('[data-toggle="popover"]').popover(); });
 <span class="toast-close" onclick='$(".bg-fav-toast").finish().hide()'>&times;</span>
 </div>
 </div>
-<script src="https://www.bluegolf.com/js/profilemenu.js?ver=20250528201432"></script>
+<script src="https://www.bluegolf.com/js/profilemenu.js?ver=20250603210712"></script>
 <script type="text/javascript">$(initMenu)</script>
 <div class="modal" id="bgRegisterModal" role="dialog" aria-hidden="true" tabindex="-1">
 <div class="modal-dialog modal-dialog-centered">
@@ -1015,10 +1015,9 @@ Following
     -->
 </script>
 <script type="text/javascript" src="https://cdn.bluegolf.com/js/slick-slider/slick.min.js"></script>
-<script type="text/javascript" src="https://cdn.bluegolf.com/ver/20250528201432/js/holestat_bootstrap4.js"></script>
+<script type="text/javascript" src="https://cdn.bluegolf.com/ver/20250603210712/js/holestat_bootstrap4.js"></script>
 <script type="text/javascript" src="https://cdn.bluegolf.com/js/gcharts/loader.js"></script>
 <script type="text/javascript" src="https://widgets.bluegolf.com/charts.js"></script>
-<script type="text/javascript" src="https://cdn.bluegolf.com/ver/20250528201432/js/leaderboard_bootstrap4.js"></script>
+<script type="text/javascript" src="https://cdn.bluegolf.com/ver/20250603210712/js/leaderboard_bootstrap4.js"></script>
 </body>
 </html>
-
