--- a/testdata/match-play-bracket.html
+++ b/testdata/match-play-bracket.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,7 +25,7 @@
     <script type="text/javascript" src="https://cdn.bluegolf.com/js/bootstrap/4.6.2/js/popper.js"></script>
     <script type="text/javascript" src="https://cdn.bluegolf.com/js/bootstrap/4.6.2/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/bgbootstrap.js"></script>
-    <script type="text/javascript" src="https://cdn.bluegolf.com/ver/20250922175152/js/bgjquery.js"></script>
+    <script type="text/javascript" src="https://cdn.bluegolf.com/ver/20251007212345/js/bgjquery.js"></script>
     <script type="text/javascript">
         <!--
         $(function() {
@@ -51,14 +49,14 @@
                 });
             });
         });
-    </script><link rel="stylesheet" type="text/css" href="/css/screen_bootstrap4.css" /><link rel="stylesheet" type="text/css" href="https://www.bluegolf.com/css/screenwww_bootstrap4.css?ver=20250922175152"/>
-    <link rel="stylesheet" type="text/css" href="/css/www-override_bootstrap4.css" /><link rel="stylesheet" type="text/css" href="https://www.bluegolf.com/css/wwwprofile.css?ver=20250922175152"/>
+    </script><link rel="stylesheet" type="text/css" href="/css/screen_bootstrap4.css" /><link rel="stylesheet" type="text/css" href="https://www.bluegolf.com/css/screenwww_bootstrap4.css?ver=20251007212345"/>
+    <link rel="stylesheet" type="text/css" href="/css/www-override_bootstrap4.css" /><link rel="stylesheet" type="text/css" href="https://www.bluegolf.com/css/wwwprofile.css?ver=20251007212345"/>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
     <style> #bgContentContainer { margin-bottom: 50px; max-width: 1420px!important; min-height: 680px; } #pgmHeader .container { width: 1420px !important; max-width: unset; } </style><script src="https://cdn.bluegolf.com/js/quasimondo-blur/FastBlur.min.jsz" type="text/javascript"></script>
-    <script src="https://www.bluegolf.com/js/layoutsection.js?ver=20250922175152" type="text/javascript"></script>
-    <script src="https://cdn.bluegolf.com/ver/20250922175152/js/holeover.js"></script>
+    <script src="https://www.bluegolf.com/js/layoutsection.js?ver=20251007212345" type="text/javascript"></script>
+    <script src="https://cdn.bluegolf.com/ver/20251007212345/js/holeover.js"></script>
     <style media="screen" type="text/css">span.holestat:hover{cursor:pointer}.yui-panel-container .yui-panel{border-width:2px}.yui-panel-container .yui-panel .bd{padding:0;background:#ccc}.yui-panel-container .yui-panel .hd .tl{padding:2px 5px 5px 5px}.hole-stat-panel{width:400px;margin-left:-200px}.hole-stat-panel .modal-body{max-height:450px}canvas{position:absolute}.bg-course-overview-range{font-size:2.5em}.bg-course-overview-range-minor{font-size:1.9em}.bg-course-overview-pinflag{height:32px;position:relative;width:11px}.bg-course-overview-aerial p{position:absolute;z-index:100;width:140px;font-size:18px;text-shadow:0 1px 4px #fff;color:#505050;line-height:.9;text-align:left}#holeMap{height:510px;width:360px}@media (max-width:767px){.modal.fade.in{top:20px;left:50%}}</style>
-    <link href="https://www.bluegolf.com/css/leftsidebar_bootstrap4.css?ver=20250922175152" rel="stylesheet" type="text/css"/>
+    <link href="https://www.bluegolf.com/css/leftsidebar_bootstrap4.css?ver=20251007212345" rel="stylesheet" type="text/css"/>
     <script type="text/javascript">
         <!--
         window.addEventListener('DOMContentLoaded', function() {
@@ -281,8 +279,8 @@
                         <td class="border-bottom border-right align-bottom">S. Smith</td>
                         <td>&nbsp;</td>
                         <td class="border-right"><a href="../8/match/80/mtchcard.htm"> 1up</a></td>
-                        <td class="border-bottom text-right align-bottom" rowspan="3">&nbsp;</td>
-                        <td class="border-bottom align-bottom" rowspan="3">&nbsp;</td>
+                        <td class="border-bottom text-right align-bottom" rowspan="3">8.&nbsp;</td>
+                        <td class="border-bottom align-bottom" rowspan="3">C. Michailides</td>
 
                     </tr>
                     <tr>
@@ -307,7 +305,7 @@
                         <td class="border-bottom text-right align-bottom">8.&nbsp;</td>
                         <td class="border-bottom align-bottom">C. Michailides</td>
                         <td rowspan="3">&nbsp;</td>
-                        <td class="border-right" rowspan="3"><a href="../13/match/87/mtchcard.htm">Tied</a></td>
+                        <td class="border-right" rowspan="3"><a href="../13/match/87/mtchcard.htm"> 2&amp;1</a></td>
                         <td class="border-bottom text-right align-bottom" rowspan="6">&nbsp;</td>
                         <td class="border-bottom align-bottom" rowspan="6">&nbsp;</td>
 
@@ -361,7 +359,7 @@
                         <td class="border-bottom text-right align-bottom">4.&nbsp;</td>
                         <td class="border-bottom align-bottom">J. Levenson</td>
                         <td rowspan="6">&nbsp;</td>
-                        <td class="border-right" rowspan="6">&nbsp;</td>
+                        <td class="border-right" rowspan="6"><a href="../18/match/92/mtchcard.htm">Tied</a></td>
                         <td class="border-bottom align-bottom" rowspan="12">&nbsp;&nbsp;</td>
                         <td class="border-bottom align-bottom" rowspan="12">&nbsp;</td>
 
@@ -389,8 +387,8 @@
                         <td class="border-bottom border-right align-bottom">D. Moore</td>
                         <td>&nbsp;</td>
                         <td class="border-right"><a href="../8/match/81/mtchcard.htm"> 5&amp;4</a></td>
-                        <td class="border-bottom text-right align-bottom" rowspan="3"></td>
-                        <td class="border-bottom border-right align-bottom" rowspan="3"></td>
+                        <td class="border-bottom text-right align-bottom" rowspan="3">4.&nbsp;</td>
+                        <td class="border-bottom border-right align-bottom" rowspan="3">J. Levenson</td>
 
                     </tr>
                     <tr>
@@ -415,7 +413,7 @@
                         <td class="border-bottom text-right align-bottom">5.&nbsp;</td>
                         <td class="border-bottom align-bottom">C. Shaw</td>
                         <td rowspan="3">&nbsp;</td>
-                        <td rowspan="3"><a href="../13/match/88/mtchcard.htm">Tied</a></td>
+                        <td rowspan="3"><a href="../13/match/88/mtchcard.htm"> 3&amp;2</a></td>
                         <td rowspan="12">&nbsp;</td>
                         <td class="border-right text-right align-middle" rowspan="12">&nbsp;</td>
 
@@ -521,8 +519,8 @@
                         <td class="border-bottom align-bottom">R. Holm</td>
                         <td rowspan="3">&nbsp;</td>
                         <td class="border-right" rowspan="3"><a href="../13/match/90/mtchcard.htm"> 2&amp;1</a></td>
-                        <td class="border-bottom text-right align-bottom" rowspan="6"></td>
-                        <td class="border-bottom border-right align-bottom" rowspan="6"></td>
+                        <td class="border-bottom text-right align-bottom" rowspan="6">2.&nbsp;</td>
+                        <td class="border-bottom border-right align-bottom" rowspan="6">J. Tokanel</td>
 
                     </tr>
                     <tr>
@@ -574,7 +572,7 @@
                         <td class="border-bottom text-right align-bottom">3.&nbsp;</td>
                         <td class="border-bottom align-bottom">J. Klein</td>
                         <td rowspan="6">&nbsp;</td>
-                        <td rowspan="6">&nbsp;</td>
+                        <td rowspan="6"><a href="../18/match/91/mtchcard.htm"> 4&amp;3</a></td>
                         <td		<td colspan="2" rowspan="11">&nbsp;</td>
 
                     </tr>
@@ -833,9 +831,9 @@
     //]]>
 </script>
 <script type="text/javascript" src="https://cdn.bluegolf.com/js/sidr/2.2.1/jquery.sidr.min.js"></script>
-<script src="https://www.bluegolf.com/js/bgpagenav.js?ver=20250922175152"></script><script src="https://www.bluegolf.com/js/sitesearch.js?ver=20250922175152"></script><script defer type="text/javascript" src="https://www.bluegolf.com/js/topbar.js"></script><script type="text/javascript">
+<script src="https://www.bluegolf.com/js/bgpagenav.js?ver=20251007212345"></script><script src="https://www.bluegolf.com/js/sitesearch.js?ver=20251007212345"></script><script defer type="text/javascript" src="https://www.bluegolf.com/js/topbar.js"></script><script type="text/javascript">
     $(function () { $('[data-toggle="popover"]').popover(); });
-</script><script src="https://cdn.bluegolf.com/ver/20250922175152/js/fav.js"></script>
+</script><script src="https://cdn.bluegolf.com/ver/20251007212345/js/fav.js"></script>
 <script type="text/javascript">!function(){"use strict";function i(t){document.getElementById("favframe").contentWindow.postMessage("/*fav_post*/"+JSON.stringify(t),"https://www.bluegolf.com")}var n;window.addEventListener("message",function(t){if(/^https:\/\/[-a-z]+\.bluegolf\.(biz|com)$/.test(t.origin)){var e=/^\s*\/\*\s*([^*\s]*)\s*\*\/(.*)/.exec(t.data);if(e&&"fav_data"===e[1]){var a=JSON.parse(e[2]);if(n?n(a):n=fav("https://app.bluegolf.com/util/api/fav.json",!1,a,i),a&&a.user&&a.user.uuid){var o=Date.now(),s=Number(localStorage.getItem("favdatausertime"))||0;localStorage.setItem("favdatausertime",o),15e5<o-s&&$.getScript("https://app.bluegolf.com/util/api/go.jsp?host=nhgaclub.bluegolf.com")}}}}),$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip()})}()</script>
 <div class="hide modal fade" role="dialog" id="auth-modal" tabindex="-1">
     <div class="modal-dialog" role="document">
@@ -904,7 +902,7 @@
         <span class="toast-close" onclick='$(".bg-fav-toast").finish().hide()'>&times;</span>
     </div>
 </div>
-<script src="https://www.bluegolf.com/js/profilemenu.js?ver=20250922175152"></script>
+<script src="https://www.bluegolf.com/js/profilemenu.js?ver=20251007212345"></script>
 <script type="text/javascript">$(initMenu)</script>
 <div class="modal" id="bgRegisterModal" role="dialog" aria-hidden="true" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
@@ -1036,9 +1034,9 @@
     -->
 </script>
 <script type="text/javascript" src="https://cdn.bluegolf.com/js/slick-slider/slick.min.js"></script>
-<script type="text/javascript" src="https://cdn.bluegolf.com/ver/20250922175152/js/holestat_bootstrap4.js"></script>
+<script type="text/javascript" src="https://cdn.bluegolf.com/ver/20251007212345/js/holestat_bootstrap4.js"></script>
 <script type="text/javascript" src="https://cdn.bluegolf.com/js/gcharts/loader.js"></script>
 <script type="text/javascript" src="https://widgets.bluegolf.com/charts.js"></script>
-<script type="text/javascript" src="https://cdn.bluegolf.com/ver/20250922175152/js/leaderboard_bootstrap4.js"></script>
+<script type="text/javascript" src="https://cdn.bluegolf.com/ver/20251007212345/js/leaderboard_bootstrap4.js"></script>
 </body>
 </html>
