Finalize match play scraper

--- a/testdata/match-play-bracket.html
+++ b/testdata/match-play-bracket.html
@@ -360,8 +360,8 @@
                         <td class="border-bottom align-bottom">J. Levenson</td>
                         <td rowspan="6">&nbsp;</td>
                         <td class="border-right" rowspan="6"><a href="../18/match/92/mtchcard.htm"> 2&amp;1</a></td>
-                        <td class="border-bottom align-bottom" rowspan="12">&nbsp;&nbsp;</td>
-                        <td class="border-bottom align-bottom" rowspan="12">&nbsp;</td>
+                        <td class="border-bottom align-bottom" rowspan="12">&nbsp;2.&nbsp;</td>
+                        <td class="border-bottom align-bottom" rowspan="12">J. Tokanel</td>
 
                     </tr>
                     <tr>
@@ -467,7 +467,7 @@
                         <td class="border-bottom text-right align-bottom">2.&nbsp;</td>
                         <td class="border-bottom align-bottom">J. Tokanel</td>
                         <td rowspan="12">&nbsp;</td>
-                        <td rowspan="12"></td>
+                        <td rowspan="12"><a href="../23/match/93/mtchcard.htm"> 1up (19 holes)</a></td>
                     </tr>
                     <tr>
                         <td class="border-bottom text-right align-top">&nbsp;</td>
